Upate Intro tutorial text

--- a/Manuscripts/Markov_Tutorial_Part2.Rmd
+++ b/Manuscripts/Markov_Tutorial_Part2.Rmd
@@ -35,7 +35,7 @@ tags:
 - Tutorial
 - R
 abstract: |
-  Decision models can synthesize evidence from different sources to simulate the long-term consequences of different strategies in the presence of uncertainty. Cohort state-transition models (cSTM) are decision models commonly used in medical decision-making to simulate hypothetical cohorts' transitions across various health states over time. This tutorial shows how to implement cSTMs in R, an open-source mathematical and statistical programming language. As an example, we use a previously published cSTM-based cost-effectiveness analysis. With this example, we illustrate time-dependent cSTMs, where transition probabilities vary by age and are dependent on time spent in a health state (state residence). We also illustrate how to compute various epidemiological outcomes of interest, such as survival probability and prevalence. We demonstrate how to conduct a cost-effectiveness analysis of multiple strategies using the example model, including probabilistic sensitivity analyses. We provide a link to a public repository with all the R code described in this tutorial that can be used to replicate the example or be adapted for various decision modeling applications.
+  In an accompanying tutorial, Decision models can synthesize evidence from different sources to simulate the long-term consequences of different strategies in the presence of uncertainty. Cohort state-transition models (cSTM) are decision models commonly used in medical decision-making to simulate hypothetical cohorts' transitions across various health states over time. This tutorial shows how to implement cSTMs in R, an open-source mathematical and statistical programming language. As an example, we use a previously published cSTM-based cost-effectiveness analysis. With this example, we illustrate time-dependent cSTMs, where transition probabilities vary by age and are dependent on time spent in a health state (state residence). We also illustrate how to compute various epidemiological outcomes of interest, such as survival probability and prevalence. We demonstrate how to conduct a cost-effectiveness analysis of multiple strategies using the example model, including probabilistic sensitivity analyses. We provide a link to a public repository with all the R code described in this tutorial that can be used to replicate the example or be adapted for various decision modeling applications.
 ---
 ```{r, echo = FALSE}
 ## Journal Abbreviations
