--- a/Manuscripts/Markov_Tutorial_Part1.Rmd
+++ b/Manuscripts/Markov_Tutorial_Part1.Rmd
@@ -53,7 +53,7 @@ abstract: |
 ```
 
 ```{r setup, include=FALSE}
-#install.packages(c("kableExtra", "scales", "tensorA" ))
+#install.packages(c("kableExtra", "scales", "dampack"))
 library(knitr)
 library(kableExtra) # https://haozhu233.github.io/kableExtra/awesome_table_in_html.html
 library(dplyr)
@@ -61,7 +61,6 @@ library(reshape2)
 library(ggplot2)
 library(scales) # For dollar signs and commas
 library(boot)
-# devtools::install_github("DARTH-git/dampack")
 library(dampack)
 # devtools::install_github("DARTH-git/darthtools")
 library(darthtools)
